fix: Dark mode

--- a/website/src/pages/playground/styles.module.css
+++ b/website/src/pages/playground/styles.module.css
@@ -10,6 +10,10 @@
  * and scoped locally.
  */
 
+body > div {
+  overflow: hidden;
+}
+
 .argsInputContainer {
   display: flex;
   width: 100%;
@@ -18,7 +22,9 @@
 }
 
 .argsInputField {
-  border: 1px solid #d9d9d9;
+  color: var(--ifm-navbar-search-input-color);
+  background-color: var(--ifm-navbar-search-input-background-color);
+  border: 1px solid var(--ifm-color-emphasis-500);
   border-radius: 4px;
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -27,18 +33,26 @@
   outline: none;
 }
 
+html[data-theme='dark'] .argsInputField {
+  border: 1px solid var(--ifm-color-emphasis-100);
+}
+
 .argsIconContainer {
   padding-top: 4px;
   margin-left: 0;
-  background-color: white;
-  border: 1px solid #d9d9d9;
-  border-left: white;
+  background-color: var(--ifm-navbar-search-input-background-color);
+  border: 1px solid var(--ifm-color-emphasis-500);
+  border-left: none;
   border-radius: 4px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   color: var(--ifm-color-primary);
   min-width: 50px;
   text-align: center;
+}
+
+html[data-theme='dark'] .argsIconContainer {
+  border: 1px solid var(--ifm-color-emphasis-100);
 }
 
 .argsIconContainer:hover {
@@ -54,6 +68,7 @@
 .row {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .ellapsed {
